# cam-tools

./: .gitignore  LICENSE  README.md
client/: pyproject.toml
client/src/python_cam/: __init__.py  app.py
docs/: init.md
server/: pyproject.toml
server/src/server/: server.py
