[project]
name = "python-cam"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "nogi", email = "94681885+nogikun@users.noreply.github.com" }
]
dependencies = [
    "opencv-python>=4.10.0.84",
    "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python_cam"]
