[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "nogi", email = "94681885+nogikun@users.noreply.github.com" }
]
dependencies = [
    "fastapi>=0.115.5",
    "uvicorn>=0.32.1",
    "matplotlib>=3.9.2",
    "opencv-python>=4.10.0.84",
    "python-multipart>=0.0.17",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/server"]
